--- a/proportal/public/css/proportal.css
+++ b/proportal/public/css/proportal.css
@@ -632,17 +632,22 @@ small, .small, pre.debug {
 
 /* partials/nav */
 .sidebar li {
-  padding: 12px;
-  padding: 0.75rem; }
+  border-left: 4px solid transparent;
+  border-left: .25rem solid transparent;
+  padding-left: 8px;
+  padding-left: .5rem; }
+  .sidebar li a {
+    line-height: 32px;
+    line-height: 2rem; }
+    .sidebar li a:hover, .sidebar li a:focus, .sidebar li a:active {
+      border-bottom-width: 1px; }
+    .sidebar li a:hover, .sidebar li a:focus {
+      border-bottom-style: dotted; }
+    .sidebar li a:active {
+      border-bottom-style: solid; }
 
-.sidebar li a:hover, .sidebar li a:focus, .sidebar li a:active {
-  border-bottom-width: 1px; }
-
-.sidebar li a:hover, .sidebar li a:focus {
-  border-bottom-style: dotted; }
-
-.sidebar li a:active {
-  border-bottom-style: solid; }
+.sidebar .current {
+  border-left-color: #d3691b; }
 
 /* partials/main */
 article
