--- a/proportal/views/layouts/default.html.tt
+++ b/proportal/views/layouts/default.html.tt
@@ -40,14 +40,16 @@
 	END;
 
 	IF tmpl_includes;
+		IF tmpl_includes.scripts;
+			FOR x IN tmpl_includes.tt_scripts; %]
+<script type="text/javascript" src="[% x %]"></script>
+[%			END;
+		END;
 		IF tmpl_includes.tt_scripts;
 			FOR s IN tmpl_includes.tt_scripts;
 				f_name = 'scripts_' _ s _ '.tt';
 				PROCESS $f_name;
 			END;
-		END;
-		IF tmpl_includes.scripts;
-			# render scripts
 		END;
 	END;
 
