--- a/webui.htd/div-v33.css
+++ b/webui.htd/div-v33.css
@@ -381,7 +381,8 @@ div.working_area {
     border-top: 1px solid #999999;
     /*background-color: #e9e9e9;*/
     padding-top: 5px;
-    margin-top: 5px
+    margin-top: 5px;
+    width: 1024px;
 }
 
 #footer_inner_left {
@@ -471,4 +472,12 @@ span#news2 {
     font-size: 20px;
     color: #336699;
     font-weight: bold;
+}
+
+div#newsReleases {
+	width:950px;
+}
+
+div#content_other div#newsReleases p   {
+	font-size: 14px;
 }
