Adding sitemap, adding a bit of detail to README, error pages

--- a/proportal/views/500.tt
+++ b/proportal/views/500.tt
@@ -8,9 +8,9 @@
 </p>
 
 <pre>
-message: [% message %]
-status : [% status %]
-title  : [% title %]
-exceptn: [% exception %]
+message  : [% message %]
+status   : [% status %]
+title    : [% title %]
+exception: [% exception %]
 </pre>
 [%	END; %]
