--- a/proportal/src/css/sass/proportal.scss
+++ b/proportal/src/css/sass/proportal.scss
@@ -16,6 +16,7 @@
 @import "partials/layout";	// general page layouts
 @import "partials/header";
 @import "partials/footer";
+@import "partials/message";
 @import "partials/forms";
 @import "partials/login-form";
 @import "partials/tables";
