--- a/proportal/views/inc/footer.tt
+++ b/proportal/views/inc/footer.tt
@@ -10,7 +10,7 @@
 		<li><a href="http://www.jgi.doe.gov/whoweare/accessibility.html">Accessibility/Section 508</a></li>
 		<li><a href="http://jgi.doe.gov/disclaimer/">Disclaimer</a></li>
 		<li>ProPortal v[% sw_version %]</li>
-		<li>[% server_name %] &bull; [% ora_service %] &bull; [% settings.db.build_date %] &bull; [% request.forwarded_for_address || request.address %]</li>
+		<li>[% server_name %] &bull; [% ora_service %] &bull; [% request.forwarded_for_address || request.address %]</li>
 		<li>&copy; 1997&ndash;2015 The Regents of the University of California</li>
 	</ul>
 </footer>
